--- a/проект_01.ipynb
+++ b/проект_01.ipynb
@@ -12,6 +12,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "deletable": false,
@@ -19,31 +20,20 @@
     "id": "VUC88oWjTJw2"
    },
    "source": [
-    "Сравнение Москвы и Петербурга окружено мифами. Например:\n",
+    "На данных Яндекс Музыки мы сравним поведение пользователей двух столиц.\n",
     " * Москва — мегаполис, подчинённый жёсткому ритму рабочей недели;\n",
     " * Петербург — культурная столица, со своими вкусами.\n",
     "\n",
-    "На данных Яндекс Музыки вы сравните поведение пользователей двух столиц.\n",
     "\n",
-    "**Цель исследования** — проверьте три гипотезы:\n",
+    "\n",
+    "**Цель исследования** — проверим три гипотезы:\n",
     "1. Активность пользователей зависит от дня недели. Причём в Москве и Петербурге это проявляется по-разному.\n",
     "2. В понедельник утром в Москве преобладают одни жанры, а в Петербурге — другие. Так же и вечером пятницы преобладают разные жанры — в зависимости от города. \n",
-    "3. Москва и Петербург предпочитают разные жанры музыки. В Москве чаще слушают поп-музыку, в Петербурге — русский рэп.\n",
-    "\n",
-    "**Ход исследования**\n",
-    "\n",
-    "Данные о поведении пользователей вы получите из файла `yandex_music_project.csv`. О качестве данных ничего не известно. Поэтому перед проверкой гипотез понадобится обзор данных. \n",
-    "\n",
-    "Вы проверите данные на ошибки и оцените их влияние на исследование. Затем, на этапе предобработки вы поищете возможность исправить самые критичные ошибки данных.\n",
-    " \n",
-    "Таким образом, исследование пройдёт в три этапа:\n",
-    " 1. Обзор данных.\n",
-    " 2. Предобработка данных.\n",
-    " 3. Проверка гипотез.\n",
-    "\n"
+    "3. Москва и Петербург предпочитают разные жанры музыки. В Москве чаще слушают поп-музыку, в Петербурге — русский рэп.\n"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "deletable": false,
@@ -51,67 +41,36 @@
     "id": "Ml1hmfXC_Zcs"
    },
    "source": [
-    "## Обзор данных\n",
-    "\n",
-    "Составьте первое представление о данных Яндекс Музыки.\n",
-    "\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "deletable": false,
-    "editable": false,
-    "id": "57eAOGIz_Zcs",
-    "tags": [
-     "start_task"
-    ]
-   },
-   "source": [
-    "**Задание 1**\n",
-    "\n",
-    "Основной инструмент аналитика — `pandas`. Импортируйте эту библиотеку."
+    "## Обзор данных"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 9,
    "metadata": {
     "deletable": false,
     "id": "AXN7PHPN_Zcs"
    },
    "outputs": [],
    "source": [
-    "import pandas as pd # импорт библиотеки pandas"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "deletable": false,
-    "editable": false,
-    "id": "SG23P8tt_Zcs",
-    "tags": [
-     "start_task"
-    ]
-   },
-   "source": [
-    "**Задание 2**\n",
-    "\n",
-    "Прочитайте файл `yandex_music_project.csv` из папки `/datasets` и сохраните его в переменной `df`:"
+    "# импорт библиотеки pandas\n",
+    "import pandas as pd "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 11,
    "metadata": {
     "deletable": false,
     "id": "fFVu7vqh_Zct"
    },
    "outputs": [],
    "source": [
-    "df = pd.read_csv('/datasets/yandex_music_project.csv') # чтение файла с данными и сохранение в df"
+    " # чтение файла с данными и сохранение в df\n",
+    "try:\n",
+    "   df = pd.read_csv('/datasets/yandex_music_project.csv')\n",
+    "except:\n",
+    "   df = pd.read_csv('https://code.s3.yandex.net/datasets/yandex_music_project.csv')"
    ]
   },
   {
@@ -133,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": null,
    "metadata": {
     "deletable": false,
     "id": "oWTVX3gW_Zct"
@@ -300,7 +259,7 @@
        "9  Saint-Petersburg  21:20:49  Wednesday  "
       ]
      },
-     "execution_count": 100,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -329,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": null,
    "metadata": {
     "deletable": false,
     "id": "DSf2kIb-_Zct"
@@ -406,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": null,
    "metadata": {
     "id": "jD8EXEIvmf2h"
    },
@@ -464,7 +423,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": null,
    "metadata": {
     "deletable": false,
     "id": "oKOTdF_Q_Zct"
@@ -513,7 +472,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": null,
    "metadata": {
     "deletable": false,
     "id": "ISlFqs5y_Zct"
@@ -542,7 +501,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": null,
    "metadata": {
     "deletable": false,
     "id": "d4NOAmTW_Zct"
@@ -583,7 +542,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": null,
    "metadata": {
     "deletable": false,
     "id": "RskX29qr_Zct"
@@ -644,7 +603,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": null,
    "metadata": {
     "deletable": false,
     "id": "KplB5qWs_Zct"
@@ -675,7 +634,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": null,
    "metadata": {
     "deletable": false,
     "id": "Tq4nYRX4_Zct"
@@ -723,7 +682,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": null,
    "metadata": {
     "deletable": false,
     "id": "36eES_S0_Zct"
@@ -762,7 +721,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": null,
    "metadata": {
     "deletable": false,
     "id": "exFHq6tt_Zct"
@@ -790,7 +749,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": null,
    "metadata": {
     "deletable": false,
     "id": "-8PuNWQ0_Zct"
@@ -843,7 +802,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": null,
    "metadata": {
     "deletable": false,
     "id": "JIUcqzZN_Zct"
@@ -940,7 +899,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": null,
    "metadata": {
     "deletable": false,
     "id": "ErNDkmns_Zct"
@@ -976,7 +935,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": null,
    "metadata": {
     "deletable": false,
     "id": "wvixALnFG15m"
@@ -1127,7 +1086,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": null,
    "metadata": {
     "deletable": false,
     "id": "0_Qs96oh_Zcu"
@@ -1173,7 +1132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": null,
    "metadata": {
     "deletable": false,
     "id": "uZMKjiJz_Zcu"
@@ -1240,7 +1199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": null,
    "metadata": {
     "deletable": false,
     "id": "Nz3GdQB1_Zcu"
@@ -1283,7 +1242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": null,
    "metadata": {
     "deletable": false,
     "id": "rJcRATNQ_Zcu"
@@ -1306,7 +1265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": null,
    "metadata": {
     "deletable": false,
     "id": "hq_ncZ5T_Zcu"
@@ -1329,7 +1288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": null,
    "metadata": {
     "deletable": false,
     "id": "_NTy2VPU_Zcu"
@@ -1352,7 +1311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": null,
    "metadata": {
     "deletable": false,
     "id": "j2y3TAwo_Zcu"
@@ -1375,7 +1334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": null,
    "metadata": {
     "deletable": false,
     "id": "vYDw5u_K_Zcu"
@@ -1398,7 +1357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": null,
    "metadata": {
     "deletable": false,
     "id": "8_yzFtW3_Zcu"
@@ -1439,7 +1398,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": null,
    "metadata": {
     "deletable": false,
     "id": "APAcLpOr_Zcu"
@@ -1567,7 +1526,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": null,
    "metadata": {
     "deletable": false,
     "id": "qeaFfM_P_Zcu"
@@ -1580,7 +1539,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": null,
    "metadata": {
     "deletable": false,
     "id": "ORaVRKto_Zcu"
@@ -1615,7 +1574,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": null,
    "metadata": {
     "deletable": false,
     "id": "laJT9BYl_Zcu"
@@ -1675,7 +1634,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": null,
    "metadata": {
     "deletable": false,
     "id": "yz7itPUQ_Zcu"
@@ -1711,7 +1670,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": null,
    "metadata": {
     "deletable": false,
     "id": "kwUcHPdy_Zcu"
@@ -1745,7 +1704,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": null,
    "metadata": {
     "deletable": false,
     "id": "EzXVRE1o_Zcu"
@@ -1779,7 +1738,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": null,
    "metadata": {
     "deletable": false,
     "id": "JZaEKu5v_Zcu"
@@ -1867,7 +1826,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": null,
    "metadata": {
     "deletable": false,
     "id": "r19lIPke_Zcu"
@@ -1897,7 +1856,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": null,
    "metadata": {
     "deletable": false,
     "id": "WhCSooF8_Zcv"
@@ -1950,7 +1909,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": null,
    "metadata": {
     "deletable": false,
     "id": "gluLIpE7_Zcv"
@@ -1980,7 +1939,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": null,
    "metadata": {
     "deletable": false,
     "id": "uaGJHjVU_Zcv"
@@ -2882,7 +2841,7 @@
    "provenance": []
   },
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "da_practicum_env2",
    "language": "python",
    "name": "python3"
   },
@@ -2896,7 +2855,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.5"
+   "version": "3.9.13"
   },
   "toc": {
    "base_numbering": 1,
@@ -2918,6 +2877,11 @@
    },
    "toc_section_display": true,
    "toc_window_display": false
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "e3032394db83c2c494a476c5588f4da7a4c8a370c24750e5ed45e62c348e99d6"
+   }
   }
  },
  "nbformat": 4,
