--- a/проект_01.ipynb
+++ b/проект_01.ipynb
@@ -1214,6 +1214,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "deletable": false,
@@ -1224,40 +1225,39 @@
     ]
    },
    "source": [
-    "**Задание 23**\n",
-    "\n",
-    "Сохраните таблицы с данными в две переменные:\n",
+    "Сохраним таблицы с данными в две переменные:\n",
     "* по Москве — в `moscow_general`;\n",
     "* по Санкт-Петербургу — в `spb_general`."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "metadata": {
     "deletable": false,
     "id": "qeaFfM_P_Zcu"
    },
    "outputs": [],
    "source": [
-    "moscow_general = df[df['city'] == 'Moscow'] # получение таблицы moscow_general из тех строк таблицы df, \n",
-    "# для которых значение в столбце 'city' равно 'Moscow'\n"
+    "# получение таблицы moscow_general из тех строк таблицы df\n",
+    "moscow_general = df[df['city'] == 'Moscow']\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "metadata": {
     "deletable": false,
     "id": "ORaVRKto_Zcu"
    },
    "outputs": [],
    "source": [
-    "spb_general = df[df['city'] == 'Saint-Petersburg']# получение таблицы spb_general из тех строк таблицы df,\n",
-    "# для которых значение в столбце 'city' равно 'Saint-Petersburg'\n"
+    "# получение таблицы spb_general из тех строк таблицы df\n",
+    "spb_general = df[df['city'] == 'Saint-Petersburg']\n"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "deletable": false,
@@ -1268,9 +1268,7 @@
     ]
    },
    "source": [
-    "**Задание 24**\n",
-    "\n",
-    "Создайте функцию `genre_weekday()` с четырьмя параметрами:\n",
+    "Создадим функцию `genre_weekday()` с четырьмя параметрами:\n",
     "* таблица (датафрейм) с данными,\n",
     "* день недели,\n",
     "* начальная временная метка в формате 'hh:mm', \n",
@@ -1281,7 +1279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "metadata": {
     "deletable": false,
     "id": "laJT9BYl_Zcu"
@@ -1291,38 +1289,24 @@
     "# Объявление функции genre_weekday() с параметрами table, day, time1, time2,\n",
     "# которая возвращает информацию о самых популярных жанрах в указанный день в\n",
     "# заданное время:\n",
-    "# 1) в переменную genre_df сохраняются те строки переданного датафрейма table, для\n",
-    "#    которых одновременно:\n",
-    "#    - значение в столбце day равно значению аргумента day\n",
-    "#    - значение в столбце time больше значения аргумента time1\n",
-    "#    - значение в столбце time меньше значения аргумента time2\n",
-    "#    Используйте последовательную фильтрацию с помощью логической индексации.\n",
-    "# 2) сгруппировать датафрейм genre_df по столбцу genre, взять один из его\n",
-    "#    столбцов и посчитать методом count() количество записей для каждого из\n",
-    "#    присутствующих жанров, получившийся Series записать в переменную\n",
-    "#    genre_df_count\n",
-    "# 3) отсортировать genre_df_count по убыванию встречаемости и сохранить\n",
-    "#    в переменную genre_df_sorted\n",
-    "# 4) вернуть Series из 10 первых значений genre_df_sorted, это будут топ-10\n",
-    "#    популярных жанров (в указанный день, в заданное время)\n",
-    "\n",
     "def genre_weekday(df, day, time1, time2):\n",
     "    # последовательная фильтрация\n",
     "    # оставляем в genre_df только те строки df, у которых день равен day\n",
-    "    genre_df = df[df['day'] == day] # ваш код здесь\n",
+    "    genre_df = df[df['day'] == day]\n",
     "    # оставляем в genre_df только те строки genre_df, у которых время меньше time2\n",
-    "    genre_df = genre_df[genre_df['time'] < time2]# ваш код здесь\n",
+    "    genre_df = genre_df[genre_df['time'] < time2]\n",
     "    # оставляем в genre_df только те строки genre_df, у которых время больше time1\n",
-    "    genre_df = genre_df[genre_df['time'] > time1] # ваш код здесь\n",
-    "    # сгруппируем отфильтрованный датафрейм по столбцу с названиями жанров, возьмём столбец genre и посчитаем кол-во строк для каждого жанра методом count()\n",
-    "    genre_df_grouped = genre_df.groupby('genre')['genre'].count() # ваш код здесь\n",
+    "    genre_df = genre_df[genre_df['time'] > time1]\n",
+    "    # сгруппируем отфильтрованный датафрейм по столбцу с названиями жанров, посчитаем кол-во строк для каждого жанра методом count()\n",
+    "    genre_df_grouped = genre_df.groupby('genre')['genre'].count()\n",
     "    # отсортируем результат по убыванию (чтобы в начале Series оказались самые популярные жанры)\n",
-    "    genre_df_sorted = genre_df_grouped.sort_values(ascending=False) # ваш код здесь\n",
+    "    genre_df_sorted = genre_df_grouped.sort_values(ascending=False)\n",
     "    # вернём Series с 10 самыми популярными жанрами в указанный отрезок времени заданного дня\n",
     "    return genre_df_sorted[:10]"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "deletable": false,
@@ -1333,15 +1317,12 @@
     ]
    },
    "source": [
-    "**Задание 25**\n",
-    "\n",
-    "\n",
-    "Cравните результаты функции `genre_weekday()` для Москвы и Санкт-Петербурга в понедельник утром (с 7:00 до 11:00) и в пятницу вечером (с 17:00 до 23:00):"
+    "Cравним результаты функции `genre_weekday()` для Москвы и Санкт-Петербурга в понедельник утром (с 7:00 до 11:00) и в пятницу вечером (с 17:00 до 23:00):"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
    "metadata": {
     "deletable": false,
     "id": "yz7itPUQ_Zcu"
@@ -1360,24 +1341,23 @@
        "world          181\n",
        "rusrap         175\n",
        "alternative    164\n",
-       "unknown        161\n",
+       "classical      157\n",
        "Name: genre, dtype: int64"
       ]
      },
-     "execution_count": 128,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "genre_weekday(moscow_general, 'Monday', '07:00', '11:00') # вызов функции для утра понедельника в Москве (вместо df — таблица moscow_general)\n",
-    "# объекты, хранящие время, являются строками и сравниваются как строки\n",
-    "# пример вызова: genre_weekday(moscow_general, 'Monday', '07:00', '11:00')"
+    "# вызов функции для утра понедельника в Москве (вместо df — таблица moscow_general)\n",
+    "genre_weekday(moscow_general, 'Monday', '07:00', '11:00') "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 47,
    "metadata": {
     "deletable": false,
     "id": "kwUcHPdy_Zcu"
@@ -1400,18 +1380,19 @@
        "Name: genre, dtype: int64"
       ]
      },
-     "execution_count": 129,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "genre_weekday(spb_general, 'Monday', '07:00', '11:00')  # вызов функции для утра понедельника в Петербурге (вместо df — таблица spb_general)"
+    "# вызов функции для утра понедельника в Петербурге (вместо df — таблица spb_general)\n",
+    "genre_weekday(spb_general, 'Monday', '07:00', '11:00')  "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 48,
    "metadata": {
     "deletable": false,
     "id": "EzXVRE1o_Zcu"
@@ -1434,18 +1415,19 @@
        "Name: genre, dtype: int64"
       ]
      },
-     "execution_count": 130,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "genre_weekday(moscow_general, 'Friday', '17:00', '23:00')  # вызов функции для вечера пятницы в Москве"
+    "# вызов функции для вечера пятницы в Москве\n",
+    "genre_weekday(moscow_general, 'Friday', '17:00', '23:00')  "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 49,
    "metadata": {
     "deletable": false,
     "id": "JZaEKu5v_Zcu"
@@ -1456,8 +1438,8 @@
       "text/plain": [
        "genre\n",
        "pop            256\n",
-       "electronic     216\n",
        "rock           216\n",
+       "electronic     216\n",
        "dance          210\n",
        "hiphop          97\n",
        "alternative     63\n",
@@ -1468,13 +1450,14 @@
        "Name: genre, dtype: int64"
       ]
      },
-     "execution_count": 131,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "genre_weekday(spb_general, 'Friday', '17:00', '23:00')  # вызов функции для вечера пятницы в Петербурге"
+    "# вызов функции для вечера пятницы в Петербурге\n",
+    "genre_weekday(spb_general, 'Friday', '17:00', '23:00')  "
    ]
   },
   {
@@ -1516,6 +1499,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "deletable": false,
@@ -1526,47 +1510,15 @@
     ]
    },
    "source": [
-    "**Задание 26**\n",
-    "\n",
-    "Сгруппируйте таблицу `moscow_general` по жанру и посчитайте прослушивания треков каждого жанра методом `count()`. Затем отсортируйте результат в порядке убывания и сохраните его в таблице `moscow_genres`."
+    "Сгруппируем таблицу `moscow_general` по жанру и посчитаем прослушивания треков каждого жанра методом `count()`."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 52,
    "metadata": {
     "deletable": false,
     "id": "r19lIPke_Zcu"
-   },
-   "outputs": [],
-   "source": [
-    "moscow_general_genre = moscow_general.groupby('genre')['genre'].count() # одной строкой: группировка таблицы moscow_general по столбцу 'genre', \n",
-    "# подсчёт числа значений 'genre' в этой группировке методом count(), \n",
-    "moscow_genres =  moscow_general_genre.sort_values(ascending=False) # сортировка получившегося Series в порядке убывания и сохранение в moscow_genres"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "deletable": false,
-    "editable": false,
-    "id": "6kMuomxTiIr8",
-    "tags": [
-     "start_task"
-    ]
-   },
-   "source": [
-    "**Задание 27**\n",
-    "\n",
-    "Выведите на экран первые десять строк `moscow_genres`:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "deletable": false,
-    "id": "WhCSooF8_Zcv"
    },
    "outputs": [
     {
@@ -1586,16 +1538,19 @@
        "Name: genre, dtype: int64"
       ]
      },
-     "execution_count": 133,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "moscow_genres.head(10)  # просмотр первых 10 строк moscow_genres"
+    "moscow_general_genre = moscow_general.groupby('genre')['genre'].count() \n",
+    "moscow_genres =  moscow_general_genre.sort_values(ascending=False)\n",
+    "moscow_genres.head(10)"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "deletable": false,
@@ -1606,50 +1561,15 @@
     ]
    },
    "source": [
-    "**Задание 28**\n",
-    "\n",
-    "\n",
-    "Теперь повторите то же и для Петербурга.\n",
-    "\n",
-    "Сгруппируйте таблицу `spb_general` по жанру. Посчитайте прослушивания треков каждого жанра. Результат отсортируйте в порядке убывания и сохраните в таблице `spb_genres`:\n"
+    "Теперь повторим то же и для Петербурга.\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 54,
    "metadata": {
     "deletable": false,
     "id": "gluLIpE7_Zcv"
-   },
-   "outputs": [],
-   "source": [
-    "spb_general_genre = spb_general.groupby('genre')['genre'].count()# одной строкой: группировка таблицы spb_general по столбцу 'genre', \n",
-    "# подсчёт числа значений 'genre' в этой группировке методом count(), \n",
-    "spb_genres =  spb_general_genre.sort_values(ascending=False) # сортировка получившегося Series в порядке убывания и сохранение в spb_genres"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "deletable": false,
-    "editable": false,
-    "id": "5Doha_ODgyQ8",
-    "tags": [
-     "start_task"
-    ]
-   },
-   "source": [
-    "**Задание 29**\n",
-    "\n",
-    "Выведите на экран первые десять строк `spb_genres`:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "deletable": false,
-    "id": "uaGJHjVU_Zcv"
    },
    "outputs": [
     {
@@ -1669,13 +1589,15 @@
        "Name: genre, dtype: int64"
       ]
      },
-     "execution_count": 135,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "spb_genres.head(10)  # просмотр первых 10 строк spb_genres"
+    "spb_general_genre = spb_general.groupby('genre')['genre'].count() \n",
+    "spb_genres =  spb_general_genre.sort_values(ascending=False)\n",
+    "spb_genres.head(10)"
    ]
   },
   {
